passando lista para mysql em formato de json

--- a/hotel/src/main/resources/static/cadastroQuarto.html
+++ b/hotel/src/main/resources/static/cadastroQuarto.html
@@ -38,7 +38,7 @@
                 <input class="btnPesquisar negrito branco pointer" type="submit" value="Pesquisar">
             </div>
         </div>
-        <form action="" method="">
+        <form action="/cadastrarQuarto" method="POST">
             <div class="cadastro cadastroCentro">
                 <h1 class="negrito tituloCadastro">Cadastro de Quarto</h1>
                     <div class="campoCadastro centralizarDiv">
@@ -58,11 +58,11 @@
                     <div id="radioCargo">
                         <div>
                             <h3 class="negrito">Ativar</h1>
-                            <input type="radio" name="status" value="True">
+                            <input type="radio" name="statusReserva" value="1">
                         </div>
                         <div>
                             <h3 class="negrito">Desativar</h1>
-                            <input type="radio" name="status" value="False">
+                            <input type="radio" name="statusReserva" value="0">
                         </div>
                     </div>
                     <div class="botoesCadastro">
