--- a/hotel/src/main/resources/static/cadastroTipoQuarto.html
+++ b/hotel/src/main/resources/static/cadastroTipoQuarto.html
@@ -175,6 +175,7 @@
                         <button type="button" class="buttonPopup buttonCancel close negrito" onclick="CloseEditPopup()">Cancelar </button>
                         <button type="submit" class="buttonPopup buttonSuccess negrito">Salvar</button>
                     </footer>
+                    <input type="hidden" name="idQuarto">
                 </form>
             </div>
         <!--deletar Popup-->
