cadastro de hospede pelo proprio hospede, com verificao adicional no email

--- a/hotel/src/main/resources/static/about-us.html
+++ b/hotel/src/main/resources/static/about-us.html
@@ -42,7 +42,7 @@
                 <div class="nav-right">
                     <a href="./#reserva" class="primary-btn">Faça sua Reserva</a>
                     <a href="./loginUsuario" id="button-login">Login</a>
-                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario.html" id="button-cadastro">Cadastre-se</a></h6>
+                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario" id="button-cadastro">Cadastre-se</a></h6>
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
@@ -91,7 +91,7 @@
                             efficitur non, ultricies volutpat tellus.</p>
                         <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                             dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra.</p>
-                        <a href="#" class="primary-btn">Faça sua Reserva</a>
+                        <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -248,7 +248,7 @@
             <div class="callto-text">
                 <h2>Reserve sua estadia conosco agora mesmo!</h2>
             </div>
-            <a href="#" class="primary-btn">Faça sua Reserva</a>
+            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
         </div>
     </section>
     <!-- Call To Action End  -->
