--- a/hotel/src/main/resources/static/blog.html
+++ b/hotel/src/main/resources/static/blog.html
@@ -197,7 +197,7 @@
                         </div>
                         <div class="blog-add set-bg" data-setbg="img/blog-add.jpg">
                             <h4>Rerserve suas próximas <br />Férias</h4>
-                            <a href="#" class="primary-btn">Faça sua Reserva</a>
+                            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                         </div>
                     </div>
                 </div>
