--- a/hotel/src/main/resources/static/services.html
+++ b/hotel/src/main/resources/static/services.html
@@ -42,7 +42,7 @@
                 <div class="nav-right">
                     <a href="./#reserva" class="primary-btn">Faça sua Reserva</a>
                     <a href="./loginUsuario" id="button-login">Login</a>
-                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario.html" id="button-cadastro">Cadastre-se</a></h6>
+                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario" id="button-cadastro">Cadastre-se</a></h6>
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
@@ -216,7 +216,7 @@
                             <h2>Actividades para crianças</h2>
                         </div>
                         <p>Possuímos recreadores para manter seus filhos se divertindo enquanto você desfruta e descansa em nossas acomodações. Atividades realizadas de modo lúdico estimularão a convivência e o aprendizado de seus filho.</p>
-                        <a href="#" class="primary-btn">Faça sua Reserva</a>
+                        <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                     </div>
                 </div>
             </div>
