--- a/hotel/src/main/resources/static/cadastroUsuario.html
+++ b/hotel/src/main/resources/static/cadastroUsuario.html
@@ -12,6 +12,7 @@
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/jquey-mask.js"></script>
         <script src="js/cliente.js"></script>
+        <script src="js/formulario.js"></script>
         <!-- Css Styles -->
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
@@ -50,7 +51,7 @@
                 </div>
             </div>
         </header>
-        <form class="formularioCompra" action="">
+        <form id="cadastrarHospede" class="formularioCompra" method="POST" action="cadastrarHospede">
             <h2 class="informacoes negrito" style="font-size: 1.65em;">Cadastre ou altere dados abaixo para poder realizar compras futuras de modo mais rápido!!!</h2>
             <h3 class="linhaUnica"></h3>
             <div class="formulario" action="">
@@ -59,40 +60,40 @@
                     <div class="cadastroEsquerda">
                         <div class="campoCadastro">
                             <h1 class="negrito">Nome</h1>
-                            <input type="text" name="nomeCliente" placeholder="Nome Completo">
+                            <input type="text" name="nome" placeholder="Nome Completo">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">Telefone</h1>
-                            <input type="text" class="telefone" name="telefoneCliente" placeholder="xx xxxxx-xxxx">
+                            <input type="text" class="telefone" name="telefone" placeholder="xx xxxxx-xxxx">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">CPF</h1>
-                            <input type="text" class="cpf" name="cpfCliente" placeholder="xxx.xxx.xxx-xx">
+                            <input type="text" class="cpf" name="cpf" placeholder="xxx.xxx.xxx-xx">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">Endereço</h1>
-                            <input type="text" name="enderecoCliente" placeholder="Rua, nº, Cidade, Estado, País, CEP">
+                            <input type="text" name="endereco" placeholder="Rua, nº, Cidade, Estado, País, CEP">
                         </div>
                     </div>
                     <div class="cadastroDireita">
                         <div class="campoCadastro">
                             <h1 class="negrito">Email</h1>
-                            <input type="email" name="emailCliente" placeholder="exemplo@email.com"></select>
+                            <input type="email" name="email" placeholder="exemplo@email.com">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">Nascimento</h1>
-                            <input type="date" name="dataNascimentoCliente">
+                            <input type="date" name="nascimento">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">Senha</h1>
-                            <input type="password" name="senhaCliente" placeholder="Exemplo123!">
+                            <input type="password" name="senha" placeholder="Exemplo123!">
                         </div>
                         <div class="campoCadastro">
                             <h2 class="negrito">Confirmar Senha</h2>
-                            <input type="password" name="senhaCliente" placeholder="Exemplo123!">
+                            <input type="password" name="confirmarSenha" placeholder="Exemplo123!">
                         </div>
                     </div>
-                    <input type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
+                    <input onclick="return validarForm()" type="submit" value="Salvar" class="negrito botaoSalvarCadastro pointer">
                 </div>
             </div>
             <h3 style="line-height: 50px; margin-top: 50px; font-size: 1.7em;"><span class="negrito">Cadastre</span> um <span class="negrito">Cartão de Crédito</span> ou um <span class="negrito">Cartão de Débito</span>
@@ -128,7 +129,7 @@
                     <div class="cadastroDireita">
                         <div class="campoCadastro">
                             <h1 class="negrito">Nome no Cartão</h1>
-                            <input type="text" name="nomeCartao" placeholder="Nome Gravado no Cartão"></select>
+                            <input type="text" name="nomeCartao" placeholder="Nome Gravado no Cartão">
                         </div>
                         <div class="campoCadastro">
                             <h1 class="negrito">CVV</h1>
