--- a/hotel/src/main/resources/static/loginUsuario.html
+++ b/hotel/src/main/resources/static/loginUsuario.html
@@ -33,7 +33,7 @@
                     <div class="nav-right">
                         <a href="./#reserva" class="primary-btn">Faça sua Reserva</a>
                         <a href="./loginUsuario" id="button-login">Login</a>
-                        <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario.html" id="button-cadastro">Cadastre-se</a></h6>
+                        <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario" id="button-cadastro">Cadastre-se</a></h6>
                     </div>
                     <nav class="main-menu mobile-menu">
                         <ul>
