--- a/hotel/src/main/resources/static/rooms.html
+++ b/hotel/src/main/resources/static/rooms.html
@@ -40,7 +40,7 @@
                 <div class="nav-right">
                     <a href="./#reserva" class="primary-btn">Faça sua Reserva</a>
                     <a href="./loginUsuario" id="button-login">Login</a>
-                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario.html" id="button-cadastro">Cadastre-se</a></h6>
+                    <h6 class="text-white">Ainda não tem conta?<a href="./cadastroUsuario" id="button-cadastro">Cadastre-se</a></h6>
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
@@ -119,7 +119,7 @@
                                     <p>Piscina</p>
                                 </div>
                             </div>
-                            <a href="#" class="primary-btn">Faça sua Reserva</a>
+                            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                                     <p>Piscina</p>
                                 </div>
                             </div>
-                            <a href="#" class="primary-btn">Faça sua Reserva</a>
+                            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                                     <p>Piscina</p>
                                 </div>
                             </div>
-                            <a href="#" class="primary-btn">Faça sua Reserva</a>
+                            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                                     <p>Piscina</p>
                                 </div>
                             </div>
-                            <a href="#" class="primary-btn">Faça sua Reserva</a>
+                            <a href="/#reserva" class="primary-btn">Faça sua Reserva</a>
                         </div>
                     </div>
                 </div>
