--- a/hotel/src/main/resources/static/EditarReserva_user.html
+++ b/hotel/src/main/resources/static/EditarReserva_user.html
@@ -11,12 +11,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/hotel.css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <script src="js/storageManager.js"> </script>
         <script src="js/tabela.js"></script>
         <script src="js/hotel.js"></script>
         <style>
             th{text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 18px;};
         </style>
+        <script>
+            $(document).ready(function(){
+                checkUser();
+            });
+        </script>
     </head>
     <body>
         <div class="cabecalho">
@@ -32,8 +38,6 @@
                 </a>
             </div>
             <div class="nomeSair">
-                <h3 class="negrito branco">João Pereira Silva</h3>
-                <button class="pointer" onclick="Logout()" id="logout" >Logout</button>
             </div>
         </div>
         <div class="navegacao">
